corrected div overflow

--- a/src/components/movieitems/MovieItems.scss
+++ b/src/components/movieitems/MovieItems.scss
@@ -1,11 +1,12 @@
 main {
     width: 100%;
     height: 100%;
-    padding: 3rem 0 1rem 0;
+    padding: 3rem 0;
 
         .wrapper {
             width: 100%;
             height: 100%;
+
 
                 form {
 
@@ -53,7 +54,7 @@ section {
             flex-wrap: nowrap;
             overflow-x: auto;
             padding-bottom: 2rem;
-                  
+
               .img-row {
                 width: 100%;
                 height: 100%;
@@ -122,27 +123,23 @@ section {
             }
         
             .img {
-
                 margin-left: 15px;
+                overflow-y: hidden;
+
+                    .zindex {
+                        z-index: 10;
+                    }
 
                   .img-row {
-    
+
+
+
                     img {
                         width: 200px;
                         height: 200px;
                     }
     
                     .wishlist {
-                        position: absolute;
-                        left: 0;
-                        bottom: 0;
-                        background-color: rgb(26, 25, 25);
-                        width: 100%;
-                        height: 60px;
-                        display: grid;
-                        place-items: center;
-                        transition: all ease 0.1s;
-                        transform: scale(0.8);
     
                             h1 {
                                 color: #fff;
